--- a/floor.html
+++ b/floor.html
@@ -518,7 +518,7 @@
                     <a href="#parket" class="">Паркет</a>
                     <a href="#laminat" class="">Ламинат</a>
                     <a href="#kovrolin" class="">Ковролин</a>
-                    <a href="#linolium" class="">Линолиум</a>
+                    <a href="#linolium" class="">Линолеум</a>
                   </ul>
                   <div class="tabs__content active">
                     <table class="table" id="stajgka">
