--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@
     </div>
   </section>
 
-  <section class="form">
+  <section class="form" id="form_main">
     <div class="container">
       <div class="form_box">
         <div class="form_box_text">
